feat: update RTSP connection steps and improve UI flow

--- a/client-desktop/index.html
+++ b/client-desktop/index.html
@@ -16,7 +16,6 @@
     .step { display: none; }
     .active { display: block; }
     #stream { max-width: 100%; border: 1px solid #ccc; margin-top: 20px; }
-    /* Spinner simples */
     .spinner {
       border: 4px solid #f3f3f3;
       border-top: 4px solid #3498db;
@@ -28,10 +27,7 @@
       margin-left: 10px;
       vertical-align: middle;
     }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
 </head>
 
@@ -42,17 +38,26 @@
   <div id="step1" class="step active">
     <h3>1️⃣ Informe o usuário e senha padrão das câmeras</h3>
     <input id="user" placeholder="Usuário (ex: admin)" value="admin"><br>
-    <input id="pass" placeholder="Senha (ex: 12345)" type="password"><br>
+    <input id="pass" placeholder="Senha (ex: 12345)" value="eletriseg34263426" type="password"><br>
     <button id="next1">Avançar</button>
   </div>
 
   <!-- Etapa 2 -->
   <div id="step2" class="step">
-    <h3>2️⃣ Selecione o modelo de câmera ou copie a URL</h3>
-    <input id="rtspUrl" placeholder="rtsp://usuario:senha@ip:porta/path"><br>
+    <h3>2️⃣ Informe o IP e a porta RTSP da câmera</h3>
+    <input id="ip" placeholder="IP (ex: 192.168.15.10)" value="192.168.15.10"><br>
+    <input id="port" placeholder="Porta RTSP (ex: 546)" value="546"><br>
     <button id="back2">Voltar</button>
-    <button id="next2">Testar Conexão</button>
-    <p id="status2"></p>
+    <button id="next2">Avançar</button>
+  </div>
+
+  <!-- Etapa 3 -->
+  <div id="step3" class="step">
+    <h3>3️⃣ Selecione o modelo de câmera ou copie a URL</h3>
+    <input id="rtspUrl" placeholder="rtsp://usuario:senha@ip:porta/path"><br>
+    <button id="back3">Voltar</button>
+    <button id="next3">Testar Conexão</button>
+    <p id="status3a"></p>
 
     <table id="cameraTable">
       <caption>🧾 Modelos de câmeras (clique para preencher)</caption>
@@ -66,28 +71,33 @@
     </table>
   </div>
 
-  <!-- Etapa 3 -->
-  <div id="step3" class="step">
-    <h3>3️⃣ Visualização da Câmera</h3>
-    <button id="back3">Voltar</button>
-    <div id="status3">🔌 Tentando conectar...</div>
+  <!-- Etapa 4 -->
+  <div id="step4" class="step">
+    <h3>4️⃣ Visualização da Câmera</h3>
+    <button id="back4">Voltar</button>
+    <div id="status4">🔌 Tentando conectar...</div>
     <div id="spinnerContainer"></div>
     <img id="stream" alt="stream">
   </div>
 
   <script>
-    const step1 = document.getElementById('step1');
-    const step2 = document.getElementById('step2');
-    const step3 = document.getElementById('step3');
+    const [step1, step2, step3, step4] = [
+      document.getElementById('step1'),
+      document.getElementById('step2'),
+      document.getElementById('step3'),
+      document.getElementById('step4')
+    ];
+
     const userInput = document.getElementById('user');
     const passInput = document.getElementById('pass');
+    const ipInput = document.getElementById('ip');
+    const portInput = document.getElementById('port');
     const rtspInput = document.getElementById('rtspUrl');
-    const status2 = document.getElementById('status2');
-    const status3 = document.getElementById('status3');
-    const streamImg = document.getElementById('stream');
-    const spinnerContainer = document.getElementById('spinnerContainer');
     const tableBody = document.getElementById('cameraTableBody');
-    const next2Btn = document.getElementById('next2');
+    const status4 = document.getElementById('status4');
+    const spinnerContainer = document.getElementById('spinnerContainer');
+    const streamImg = document.getElementById('stream');
+    const next3Btn = document.getElementById('next3');
 
     const templates = [
       { name: 'Dahua / Intelbras / Tecvoz / Greatek', path: '/cam/realmonitor?channel=1&subtype=0' },
@@ -100,7 +110,7 @@
     ];
 
     function showStep(step) {
-      [step1, step2, step3].forEach(s => s.classList.remove('active'));
+      [step1, step2, step3, step4].forEach(s => s.classList.remove('active'));
       step.classList.add('active');
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
@@ -109,59 +119,70 @@
       const user = userInput.value.trim();
       const pass = passInput.value.trim();
       if (!user || !pass) return alert('Preencha usuário e senha.');
-      preencherTabela(user, pass);
       showStep(step2);
     });
 
-    document.getElementById('back2').addEventListener('click', () => showStep(step1));
+    document.getElementById('back2').addEventListener('click', () => {
+        streamImg?.src = url;
+        showStep(step1)
+    });
     document.getElementById('back3').addEventListener('click', () => {
-      next2Btn.disabled = false;
-      next2Btn.textContent = 'Testar Conexão';
+        streamImg?.src = url;
+        showStep(step2)
+    
+    });
+    document.getElementById('back4').addEventListener('click', () => {
+      streamImg?.src = url;
+      next3Btn.disabled = false;
+      next3Btn.textContent = 'Testar Conexão';
       spinnerContainer.innerHTML = '';
-      showStep(step2);
+      showStep(step3);
     });
 
-    function preencherTabela(user, pass) {
+    document.getElementById('next2').addEventListener('click', () => {
+      const ip = ipInput.value.trim();
+      const port = portInput.value.trim();
+      if (!ip || !port) return alert('Informe IP e porta RTSP.');
+      preencherTabela(userInput.value, passInput.value, ip, port);
+      showStep(step3);
+    });
+
+    function preencherTabela(user, pass, ip, port) {
       tableBody.innerHTML = '';
       templates.forEach(t => {
-        const url = `rtsp://${user}:${pass}@192.168.15.10:546${t.path}&rtsp_transport=tcp`;
+        const url = `rtsp://${user}:${pass}@${ip}:${port}${t.path}&rtsp_transport=tcp`;
         const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td><b>${t.name}</b></td>
-          <td><code>${url}</code></td>
-        `;
+        tr.innerHTML = `<td><b>${t.name}</b></td><td><code>${url}</code></td>`;
         tr.addEventListener('click', () => {
           rtspInput.value = url;
-          status2.textContent = '🔧 Exemplo carregado. Edite o IP se necessário antes de testar.';
-          window.scrollTo({ top: 0, behavior: 'smooth' });
+          document.getElementById('status3a').textContent = '🔧 Exemplo carregado. Edite se necessário antes de testar.';
         });
         tableBody.appendChild(tr);
       });
     }
 
-    document.getElementById('next2').addEventListener('click', async () => {
+    document.getElementById('next3').addEventListener('click', async () => {
       const rtspUrl = rtspInput.value.trim();
       if (!rtspUrl) return alert('Selecione ou informe uma URL RTSP.');
 
-      next2Btn.disabled = true;
-      next2Btn.textContent = 'Conectando...';
-      status3.textContent = '🔌 Tentando conectar...';
+      next3Btn.disabled = true;
+      next3Btn.textContent = 'Conectando...';
+      status4.textContent = '🔌 Tentando conectar...';
       spinnerContainer.innerHTML = '<div class="spinner"></div>';
-      showStep(step3);
+      showStep(step4);
 
       try {
-        next2Btn.disabled = true;
         const { url } = await window.cameraApi.startStream({ rtspUrl, id: 'cam1' });
         streamImg.src = url;
         spinnerContainer.innerHTML = '';
-        status3.textContent = `✅ Conectado à câmera:\n${rtspUrl}`;
       } catch (err) {
         spinnerContainer.innerHTML = '';
-        status3.textContent = `❌ Erro: ${err.message}`;
-        showStep(step2);
+        status4.textContent = `❌ Erro: ${err.message}`;
+        showStep(step3);
       } finally {
-        next2Btn.disabled = false;
-        next2Btn.textContent = 'Testar Conexão';
+        next3Btn.disabled = false;
+        next3Btn.textContent = 'Testar Conexão';
+        status4.textContent = ''
       }
     });
   </script>
